# sqlly-datatable

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PRODUCT.md  README.md  STYLE_VERIFICATION.md  build-wasm.sh  bundle.sh  run-sample.sh
.github/workflows/: ci.yml  publish.yml
.opencode/dont-get-fooled-again/sessions/ses_0f6be090dffe531gk5qebn5lir/: requests.json
crates/sqlly-datatable/: Cargo.toml
crates/sqlly-datatable-sample/: Cargo.toml  build.rs  bundle.sh
crates/sqlly-datatable-sample/src/: lib.rs  main.rs
crates/sqlly-datatable/src/: config.rs  data.rs  filter.rs  format.rs  grid.rs  lib.rs
crates/sqlly-datatable/src/grid/: context_menu.rs  menu.rs  mod.rs  motion.rs  paint.rs  selection.rs  state.rs  theme.rs  widget.rs
crates/sqlly-datatable/src/pivot/: aggregation.rs  config.rs  context_menu.rs  engine.rs  mod.rs  paint.rs  sidebar.rs  state.rs  widget.rs
crates/sqlly-datatable/tests/: grouping.rs  hardening.rs  keyboard_nav.rs  mouse_interaction.rs  nested_interaction.rs  pivot_lock.rs  streaming_append.rs  text_box_gpui.rs  windowed_rows.rs
plans/: pivot-feature.md
src/: app.rs  data.rs  format.rs  grid.rs  lib.rs  main.rs
