[workspace]
members = [
    "crates/sqlly-datatable",
    "crates/sqlly-datatable-sample",
]
resolver = "2"

[workspace.package]
version = "1.7.0"
edition = "2021"
license = "MIT"
rust-version = "1.96.0"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
# `pedantic` is intentionally NOT enabled as a workspace-level lint. Surface
# nitpicks via `cargo clippy --workspace --all-targets -- -W clippy::pedantic`
# when cleaning up an area, but don't block the build on it.

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
