[workspace]
members = [
    "crates/sqlly-datatable",
    "crates/sqlly-datatable-sample",
]
resolver = "2"

[workspace.package]
version = "4.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.96.0"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
# `pedantic` is intentionally NOT enabled as a workspace-level lint. Surface
# nitpicks via `cargo clippy --workspace --all-targets -- -W clippy::pedantic`
# when cleaning up an area, but don't block the build on it.

# Registry releases: `gpui` 0.2 and `gpui-component` 0.5 now ship compatible
# crates.io versions (the 4.0.x git pins resolved to gpui 0.2.2 /
# gpui-component 0.5.x, i.e. the same lines), which restores `cargo package`
# / `cargo publish` — crates.io rejects git dependencies. The registry `gpui`
# bundles the OS windowing backends directly (`gpui::Application`), so the
# zed-main-only `gpui_platform` shim is gone; it has no registry release. The
# sample's experimental web (wasm) build went with it — gpui's web backend
# exists only on zed's git `main`. Reinstate from git history if/when a gpui
# release ships the web backend.
[workspace.dependencies]
gpui = "0.2"
gpui-component = "0.5"
# Lucide icon SVGs for `gpui_component::Icon`, embedded in the binary.
gpui-component-assets = "0.5"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
