[package]
name = "sqlly-datatable-sample"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Sample application demonstrating the sqlly-datatable virtualized grid."
repository = "https://github.com/mattvanhorn/sqlly-datatable"
publish = false

[[bin]]
name = "sqlly-datatable-sample"
path = "src/main.rs"

[lints.clippy]
expect_used = "allow"

[dependencies]
gpui = { version = "0.2" }
sqlly-datatable = { version = "3.1.2", path = "../sqlly-datatable" }
