[package]
name = "sqlly-datatable-sample"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Sample application demonstrating the sqlly-datatable virtualized grid."
repository = "https://github.com/mattvanhorn/sqlly-datatable"
publish = false

[[bin]]
name = "sqlly-datatable-sample"
path = "src/main.rs"

# `cdylib` is what `wasm-bindgen` consumes for the web build (see
# `build-wasm.sh`); `rlib` keeps the library linkable by the native binary.
[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
expect_used = "allow"

[dependencies]
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
sqlly-datatable = { version = "4.0.1", path = "../sqlly-datatable" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
# For deriving the absolute asset endpoint from the page's base URI (the
# wasm asset fetcher requires absolute URLs).
web-sys = { version = "0.3", features = ["Window", "Document"] }
