[package]
name = "sqlly-datatable-sample"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Sample application demonstrating the sqlly-datatable virtualized grid."
repository = "https://github.com/mattvanhorn/sqlly-datatable"
publish = false

[[bin]]
name = "sqlly-datatable-sample"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]

[lints.clippy]
expect_used = "allow"

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
sqlly-datatable = { version = "4.1.0", path = "../sqlly-datatable" }
