[package]
name = "sqlly-datatable"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Configurable virtualized data grid component for the GPUI toolkit."
keywords = ["ui", "grid", "datagrid", "gpui", "table"]
categories = ["gui", "data-structures"]
repository = "https://github.com/mattvanhorn/sqlly-datatable"
documentation = "https://docs.rs/sqlly-datatable"

[lints]
workspace = true

[dependencies]
gpui = { version = "0.2" }
smol = "2.0"
