[package]
name = "sqlly-datatable"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Configurable virtualized data grid component for the GPUI toolkit."
keywords = ["ui", "grid", "datagrid", "gpui", "table"]
categories = ["gui", "data-structures"]
repository = "https://github.com/mattvanhorn/sqlly-datatable"
documentation = "https://docs.rs/sqlly-datatable"

[lints]
workspace = true

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
regex = "1"

# `smol` pulls in `async-io`/`rustix`/`errno`, none of which build for
# `wasm32-unknown-unknown`. It is currently unused in this crate, so gate it
# off the wasm target to keep the web build compiling.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
smol = "2.0"

# `std::time::SystemTime::now()` panics on wasm32-unknown-unknown; `web-time`
# provides the same API backed by the JS clock (already in the dependency
# graph via gpui's web backend).
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
